--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
- body{
-    background: linear-gradient(180deg, rgba(11,82,172,1) 13%, rgba(0,215,255,1) 100%);
+ body {
+     background: linear-gradient(180deg, rgba(11, 82, 172, 1) 13%, rgba(0, 215, 255, 1) 100%);
  }
- i{
-    font-size: 45px;
-}
 
-@media screen and (max-width:640px) {
-    .main-container{
-        width: 90%;
-    
-    }
-.heading{
-    text-align: center;
-    font-size: 3.5rem;
-    font-weight: 600;
-}
-.w-44{
-    width: 70%;
+ i {
+     font-size: 45px;
+ }
 
-}
-}
-@media screen and (max-width:425px) {
-    .main-container{
-        width: 100%;
-    
-    }
-.heading{
-    text-align: center;
-    font-size: 3.5rem;
-    font-weight: 600;
-}
-.w-44{
-    width: 100%;
-    
-}
-}
+ @media screen and (max-width:640px) {
+     .main-container {
+         width: 90%;
+         margin: 0%;
+     }
+
+     .heading {
+         text-align: center;
+         font-size: 3.5rem;
+         font-weight: 600;
+     }
+
+     .w-44 {
+         width: 70%;
+
+     }
+ }
+
+ @media screen and (max-width:425px) {
+     .main-container {
+         width: 100%;
+         margin: 0%;
+     }
+
+     .heading {
+         text-align: center;
+         font-size: 3.5rem;
+         font-weight: 600;
+     }
+
+     .w-44 {
+         width: 100%;
+
+     }
+ }
